--- a/Doku_Sysadmin.tex
+++ b/Doku_Sysadmin.tex
@@ -123,7 +123,7 @@ Beliebige Linux-Systeme
 Überprüfung davon Log-Dateien, Kontrollausgaben etc..
 robuste und zuverlässige Kommunikation möglich
 modulares und flexibles Netzwerk
-Pakete (repos) sollen leicht in Projekte eingebunden werden
+Pakete http://de.wikipedia.org/wiki/Raspberry_Pi(repos) sollen leicht in Projekte eingebunden werden
 
 optional:
 Roboter soll bei Steuerung in richtige Richtungen fahren
@@ -217,5 +217,10 @@ auf Hardwareebene
 \section{Eigene Leistung}
 
 anstatt Linux PC wird Pi benutzt
+
+\section{Quellen}
+
+http://de.wikipedia.org/wiki/Raspberry_Pi
+
 
 \end{document}
