--- a/Doku_Sysadmin.tex
+++ b/Doku_Sysadmin.tex
@@ -43,19 +43,26 @@ von Denis Herdt und Almin Causevic
 1-2 Seiten
 \subsection{Motivation}
 
-Roboter Lab Anwendung von ROS und Möglichkeit, Roboter zu nutzen
 
-Interesse der Lab-Crew an Umsetzung ROS mit Raspberry Pi
+Wir haben uns für dieses Thema entschieden, weil wir etwas in Kombination mit Hard- und Software machen wollten. Da wir außerdem Zugang zum Robotiklabor der Hochschule Weingarten haben, und mitbekommen, wie umständlich die Roboter mit einem zusätzlichen Laptop gesteuert werden, haben wir uns entschlossen, dieses Problem mithilfe des Raspberry Pi zu lösen. Die Idee stieß auch auf viel Interesse bei den anderen Laborkollegen.
+Unser Ziel möchten wir mithilfe des Betriebssystems ROS (Robot Operating System) realisieren.
+Durch die Kombination mit der Mächtigkeit und Flexibilität von ROS und der geringen Größe und dem niedrigen Energieverbrauch des Pi eröffnen sich außerdem neue und effizientere Einsatzmöglichkeiten.
+Außerdem wollten wir uns näher mit der Arbeitsweise von ROS vertraut machen und mehr mit Hardware in Berührung kommen. Dieses Projekt setzt auch viel Linuxkonfiguration voraus.
 
-Kombination Hard-/Software
 
-Einarbeitung in Kommunikations Framework ROS
+%Roboter Lab Anwendung von ROS und Möglichkeit, Roboter zu nutzen
 
-Mit Hardware in Berührung zu kommen
+%Interesse der Lab-Crew an Umsetzung ROS mit Raspberry Pi
 
-Konfiguration mit Linux
+%Kombination Hard-/Software
 
-Nodes nun mit Hardware (Pi) realisierbar
+%Einarbeitung in Kommunikations Framework ROS
+
+%Mit Hardware in Berührung zu kommen
+
+%Konfiguration mit Linux
+
+%Nodes nun mit Hardware (Pi) realisierbar
 
 \subsection{Zielstzung}
 
