--- a/Doku_Sysadmin.tex
+++ b/Doku_Sysadmin.tex
@@ -43,20 +43,14 @@ von Denis Herdt und Almin Causevic
 1-2 Seiten
 \subsection{Motivation}
 
-%coole Roboter im Labor für dieses Projekt
-Wir haben uns für dieses Thema entschieden, weil wir etwas in Kombination mit Hard- und Software machen wollten. Da wir außerdem Zugang zum Robotiklabor der Hochschule
-%Zugang besitzt jeder Student
-Weingarten haben, und mitbekommen, wie umständlich 
-%nur kleine Roboter oder in diesem Fall Volksbot
-die Roboter mit einem zusätzlichen Laptop gesteuert werden, haben wir uns entschlossen, dieses Problem mithilfe des Raspberry Pi zu lösen. Die Idee stieß auch auf viel Interesse bei den anderen Laborkollegen.
+Wir haben uns für dieses Thema entschieden, weil wir in Kombination mit Hard- Software arbeiten wollten und mitbekommen haben, wie umständlich z.B. der Roboter ''Volksbot'' im Robotiklabor der Hochschule mit einem zusätzlichen Laptop gesteuert werden muss. Deshalb haben wir uns entschlossen, dieses Problem mithilfe des Raspberry Pi zu lösen. Die Idee stieß auch auf großes Interesse bei den Labormitarbeitern und bringt viel praktischen Nutzen.
+
 Unser Ziel möchten wir mithilfe des Betriebssystems ROS (Robot Operating System) realisieren.
-%nötig?
+Für ROS haben wir uns entschieden, weil es zur Zeit die aktuellste und inovativste Methode ist, ein flexibles Netzwerk von Komponenten für z.B. die Robotersteuerung zu realisieren. Es wird Weltweit eingesetzt und könnte auch in Zukunft sehr nützlich für die Forschung werden. %für wen nützlich(uns,welt,niemand??)
+
 Durch die Kombination mit der Mächtigkeit und Flexibilität von ROS und der geringen Größe und dem niedrigen Energieverbrauch des Pi eröffnen sich außerdem neue und effizientere Einsatzmöglichkeiten.
-%dieser Absatz oben drüber?
-%weltweit benutzt, USA München, für weiteren Lebensweg nützlich eventuell
-Außerdem wollten wir uns näher mit der Arbeitsweise von ROS vertraut machen und mehr mit Hardware in Berührung kommen. 
-%Warum für uns motivierend?
-Dieses Projekt setzt auch viel Linuxkonfiguration voraus.
+
+Sehr gut finden wir auch die Tatsache, dass wir mit Linux arbeiten können und dieses Projekt viel Konfiguration des Betriebssystems voraussetzt, da wir auch gerne mehr Praxisanwendung mit Linux haben möchten.
 
 
 %Roboter Lab Anwendung von ROS und Möglichkeit, Roboter zu nutzen
