mein Teil wurde fickend gelöscht

--- a/Doku_Sysadmin.tex
+++ b/Doku_Sysadmin.tex
@@ -43,15 +43,25 @@ von Denis Herdt und Almin Causevic
 1-2 Seiten
 \subsection{Motivation}
 
-Wir haben uns für dieses Thema entschieden, weil wir in Kombination mit Hard- Software arbeiten wollten und mitbekommen haben, wie umständlich z.B. der Roboter ''Volksbot'' im Robotiklabor der Hochschule mit einem zusätzlichen Laptop gesteuert werden muss. Deshalb haben wir uns entschlossen, dieses Problem mithilfe des Raspberry Pi zu lösen. Die Idee stieß auch auf großes Interesse bei den Labormitarbeitern und bringt viel praktischen Nutzen.
-
+Wir haben uns für dieses Thema entschieden, weil wir 
+%in Kombination 
+mit Hard- und Software arbeiten wollten und mitbekommen haben, wie umständlich z.B.
+%welche Nachteile ergeben sich durch den Laptop? erwähnenswert, dass es auf dem 
+%Roboter ist -> Platz, Gewicht!
+der Roboter ''Volksbot'' im Robotiklabor der Hochschule mit einem zusätzlichen Laptop gesteuert werden muss. Deshalb haben wir uns entschlossen, dieses Problem mithilfe des Raspberry Pi zu lösen. Die Idee stieß auch auf großes Interesse bei den 
+%Welchen praktischen Nutzen? Warum dieses Interesse?
+Labormitarbeitern und bringt viel praktischen Nutzen.
+%ist ROS ein OS?
 Unser Ziel möchten wir mithilfe des Betriebssystems ROS (Robot Operating System) realisieren.
-Für ROS haben wir uns entschieden, weil es zur Zeit die aktuellste und inovativste Methode ist, ein flexibles Netzwerk von Komponenten für z.B. die Robotersteuerung zu realisieren. Es wird Weltweit eingesetzt und könnte auch in Zukunft sehr nützlich für die Forschung werden. %für wen nützlich(uns,welt,niemand??)
-
+Für ROS haben wir uns entschieden, weil es zur Zeit die aktuellste und inovativste Methode ist, ein flexibles Netzwerk von Komponenten für z.B. die Robotersteuerung zu realisieren. Es wird weltweit eingesetzt und könnte auch in Zukunft sehr nützlich für die Forschung werden. %für wen nützlich(uns,welt,niemand??)
+%gehört iwie schon oben zu Forschung
 Durch die Kombination mit der Mächtigkeit und Flexibilität von ROS und der geringen Größe und dem niedrigen Energieverbrauch des Pi eröffnen sich außerdem neue und effizientere Einsatzmöglichkeiten.
 
-Sehr gut finden wir auch die Tatsache, dass wir mit Linux arbeiten können und dieses Projekt viel Konfiguration des Betriebssystems voraussetzt, da wir auch gerne mehr Praxisanwendung mit Linux haben möchten.
-
+Sehr gut finden wir auch die Tatsache, dass wir mit Linux arbeiten können und dieses
+%Konfiguration von Linux???
+Projekt viel Konfiguration des Betriebssystems voraussetzt, da wir auch gerne mehr
+%du meinst Praxiserfahrung??
+Praxisanwendung mit Linux haben möchten.
 
 %Roboter Lab Anwendung von ROS und Möglichkeit, Roboter zu nutzen
 
@@ -155,23 +165,6 @@ GPIO (General Purpose Input/Output) ist ein weiteres interessantes Feature des R
 Es gibt uns die Möglichkeit, jegliche Hardware-Funktionalität anzusteuern.
 Beispielsweise können LED-Leuchten oder der Start-Knopf der Kaffeemaschine damit über ROS gesteuert werden.
 Wir konnten uns leider jedoch zeitlich bedingt nicht mehr mit dieser Thematik beschäftigen, es bietet aber Anreiz für noch mehr Ansätze und Umsetzungen mithilfe des Raspberry Pi und ROS.
-
-%%%%%
-%GPIO-Pins
-%%%%%
-
-%Wlan Übertragung für Raspberry über Stick sehr leistungsfressend !
-
-32-Bit-Chip-Design
-Aufgrund ihrer geringen Leistungsaufnahme kommen ARM-Prozessoren vor allem in eingebetteten Systemen, wie Mobiltelefonen, PDAs und Routern zum Einsatz.
-Besondere Bedeutung hat die Architektur bei Smartphones
-Zukunft: ARMv8 64-Bit 2014, iPhone 5s soll darauf basierenden Chip benutzen.
-Unsere PC's basieren auf einer x64 (64Bit) oder x84 (32Bit) Architektur.
-%%%%%
-% ARM-Architektur 
-% x_86 Architektur
-% Unterschiede
-%%%%%
 
 
 \subsection{Smartphone}
