--- a/Doku_Sysadmin.tex
+++ b/Doku_Sysadmin.tex
@@ -119,8 +119,8 @@ Bild einer Webcam durch ROS auf einen Bildschirm streamen
 Der Raspberry Pi ist ein kreditkartengroßer Einplatinencomputer, der von der Raspberry Pi Foundation entwickelt wurde.
 Wir benutzen für dieses Projekt das leistungsstärkere Modell B.
 
+\parbox{8cm}{
 Technische Details:
-
 \begin{itemize}
 \item Preis: ca. 35 Euro
 \item Prozessor: ARM1176JZF-S (700 MHz)
@@ -129,6 +129,13 @@ Technische Details:
 \item Bis zu 16 GPIO-Pins
 \item USB-Anschlüsse: 2
 \item FBAS, HDMI
+\end{itemize}
+}
+\hfill
+\parbox{5cm}{
+\includegraphics[width=5cm]{Raspi.jpg}
+}
+\begin{itemize}
 \item 3,5-mm-Klinkenstecker (analog), HDMI (digital)
 \item Kartenleser für SD (SDHC und SDXC)/MMC/SDIO
 \item 10/100-MBit-Ethernet-Controller 
@@ -136,14 +143,13 @@ Technische Details:
 \item 5-V-Micro-USB-Anschluss (Micro-B), alternativ 4 x AA-Batterien
 \end{itemize}
 
-Für den Anschluss an einen Bildschirm benutzen den HDMI Ausgang.
-Diesen benutzen wir für Kontrollausgaben und Tests.
+Für Test und Kontrollausgaben benutzen wir einen am HDMI-Ausgang angeschlossenen Monitor.
 
-Als Stromquelle steht ein Akkupack ......(Firma,Modell) zum Einsatz. 
+Als Stromquelle steht ein Akkupack ......(Firma,Modell) zur Verfügung. 
 Hierbei ist wichtig, dass der Raspberry mind. 700 mA, besser 1 A zur Stromversorgung bekommt. 
-Bei niedrigerer Amperzahl arbeitet der PC oft nicht zuverlässig.
+Bei niedrigerer Amperzahl arbeitet er oft nicht zuverlässig.
 
-Ein schneller und großer RAM Speicher ist für unsere Zwecke wichtig, da viele Signale, teils sogar synchron, verarbEin 17-Zoll Monitor wird für die Bildschirmausgabe des Raspberry über HDMI zu DVI benutzteitet werden müssen.
+Ein schneller und großer RAM Speicher ist für unsere Zwecke wichtig, da viele Signale, teils sogar synchron, verarbeitet werden müssen.
 
 Für die Datenübertragung über das Netz benutzen wir einen Standard 300Mbit/s Wlan-Stick.
 
@@ -151,8 +157,8 @@ Der Raspberry Pi arbeitet mit einer ARM-Prozessorarchitektur.
 Diese Architektur wird gerne für embedded Systems, wie PDAs oder Router, eingesetzt.
 
 Sie ist auch auf jedem Smartphone zu finden, da sie den Vorteil einer sehr geringen Leistungsaufnahme bietet. 
+Erwähnenswert ist die Architektur deshalb, weil wir im Laufe des Projektes Schwierigkeiten hatten, auf die wir später eingehen werden.
 
-Erwähnenswert ist die Architektur deshalb, weil wir im Laufe des Projektes Schwierigkeiten hatten, auf die wir später eingehen werden
 Wir benutzen das auf Linux basierende Betriebssystem Raspbian.
 Dabei handelt sich um ein für Raspberry Pi optimiertes open-source Debian-System.
 Es enthält viele für die ARM-Architektur vorkompilierte Pakete (über 35.000), dazu auch Features wie etwa eine GUI.
@@ -178,6 +184,8 @@ Wir konnten uns leider jedoch zeitlich bedingt nicht mehr mit dieser Thematik be
 
 
 \section{Problem}
+
+%Motorsteuerung Problem ARM-Architektur x86, Paket muss neu kompiliert und konfiguriert werden
 
 Hauptproblem??
 
